--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Fontawesome ICON-->
-    <link href="css/all.css" rel="stylesheet">
+    <link href="assets/css/all.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Style.css CSS -->
@@ -15,7 +15,24 @@
 </head>
 <body>
 
-
+<div class="quote-container" id="quote-container">
+    <!--   Quote -->
+    <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+    </div>
+    <!--    author   -->
+    <div class="quote-author">
+        <span id="author">Gilbert</span>
+    </div>
+    <!--    buttons   -->
+    <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+            <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+    </div>
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
