--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!--   Quote -->
     <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+        <span id="quote"></span>
     </div>
     <!--    author   -->
     <div class="quote-author">
-        <span id="author">Gilbert</span>
+        <span id="author"></span>
     </div>
     <!--    buttons   -->
     <div class="button-container">
