--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </div>
 </div>
 
+<!-- Loader -->
+<div class="loader" id="loader">
+
+</div>
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="js/jquery-3.5.1.min.js"></script>
